test to see if overflow bug is fixed

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* CSS RESET  */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -245,7 +253,7 @@ button.active {
 
 .tipPerPerson {
     vertical-align: center;
-    margin-left: 4rem;
+    margin-left: 5rem;
     font-size: 1.5rem;
     color: hsl(172, 67%, 45%)
 }
@@ -289,6 +297,7 @@ button.active {
 
     h1 {
         background: none;
+        padding: 3rem 0 2.5rem 0;
     }
 
     .container {
@@ -310,7 +319,7 @@ button.active {
         height: 30%;
     }
 
-    input[type="number"] {
+    #amountInput {
         width: 90%;
         height: 2.2rem;
         border: none;
@@ -323,7 +332,7 @@ button.active {
         color: hsl(184, 14%, 56%);
     }
 
-    input[type="number"]::placeholder {
+    #amountInput::placeholder {
         text-align: end;
     }
 
@@ -368,7 +377,7 @@ button.active {
 
     .tipPerPerson {
         vertical-align: center;
-        margin-left: 15rem;
+        margin-left: 12rem;
         margin-top: 1rem;
         font-size: 2rem;
         color: hsl(172, 67%, 45%)
@@ -376,7 +385,7 @@ button.active {
 
     .totalTip {
         vertical-align: center;
-        margin-left: 18rem;
+        margin-left: 13rem;
         margin-top: 2rem;
         font-size: 2rem;
         color: hsl(172, 67%, 45%)
